@@ -1,20 +1,21 @@
-package bookclub.book;
+package bookclub.services;
 
+import bookclub.models.Book;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Scanner;
 
-public class GoogleBookDetails {
+public class GoogleBookDetailsService {
     static String baseUrl = "https://www.googleapis.com/books/v1/volumes?q=";
 
     public static String executeGetRequest(String urlString){
@@ -50,8 +51,6 @@ public class GoogleBookDetails {
             return null;
         }
 
-        Book book = null;
-
         Gson gson = new Gson();
         JsonElement element = gson.fromJson(response, JsonElement.class);
         JsonObject object = element.getAsJsonObject();
@@ -67,12 +66,10 @@ public class GoogleBookDetails {
     }
 
     public static List<Book> getBooksBasedOnTitle(String title){
-        String urlString = null;
-        try {
-            urlString = baseUrl + URLEncoder.encode(title, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        String urlString;
+
+        urlString = baseUrl + URLEncoder.encode(title, StandardCharsets.UTF_8) + "&maxResults=40";
+
         String response = executeGetRequest(urlString);
 
         if (response == null){
@@ -89,37 +86,55 @@ public class GoogleBookDetails {
         
         for (int i = 0; i < itemsCount; i++) {
             JsonObject jsonBook = itemsArray.get(i).getAsJsonObject().getAsJsonObject("volumeInfo");
-            books.add(getBook(jsonBook));
+
+            if (jsonBook != null){
+                books.add(getBook(jsonBook));
+            }
         }
         return books;
     }
 
     private static Book getBook(JsonObject jsonBook) {
-        Book book;
-        book = new Book();
+        Book book = new Book();
         String isbn10 = "";
-        for (JsonElement id : jsonBook.getAsJsonArray("industryIdentifiers")) {
-            JsonObject industryId = id.getAsJsonObject();
-            if (industryId.get("type").getAsString().equals("ISBN_10")) {
-                isbn10 = industryId.get("identifier").getAsString();
-                break;
+
+        JsonArray identifiers = jsonBook.getAsJsonArray("industryIdentifiers");
+        if (identifiers != null && identifiers.size() > 0){
+            for (JsonElement id : jsonBook.getAsJsonArray("industryIdentifiers")) {
+                JsonObject industryId = id.getAsJsonObject();
+                if (industryId.get("type").getAsString().equals("ISBN_10")) {
+                    isbn10 = industryId.get("identifier").getAsString();
+                    break;
+                }
             }
+            book.setIsbn(isbn10);
         }
-        book.setIsbn(isbn10);
-        book.setTitle(jsonBook.get("title").getAsString());
-        book.setDescription(jsonBook.get("description").getAsString());
+
+        JsonElement title = jsonBook.get("title");
+        if (title != null){
+            book.setTitle(title.getAsString());
+        }
+
+        JsonElement description = jsonBook.get("description");
+        if (description != null){
+            book.setDescription(description.getAsString());
+        }
+
         JsonArray authorsArray = jsonBook.getAsJsonArray("authors");
         StringBuilder authors = new StringBuilder();
 
-        for (int i = 0; i < authorsArray.size(); i++){
-            if (i == 0){
-                authors.append(authorsArray.get(0).getAsString());
-            } else {
-                authors.append(", ").append(authorsArray.get(i).getAsString());
+        if (authorsArray != null && authorsArray.size() > 0){
+            for (int i = 0; i < authorsArray.size(); i++){
+                if (i == 0){
+                    authors.append(authorsArray.get(0).getAsString());
+                } else {
+                    authors.append(", ").append(authorsArray.get(i).getAsString());
+                }
             }
+
+            book.setAuthor(authors.toString());
         }
 
-        book.setAuthor(authors.toString());
         return book;
     }
 
